lab/clusters/kind/services-stack/pod-hostvol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod2
spec:
  nodeName: testing-worker2
  containers:
  - image: nginx:1.7.9
    name: test-pod
    volumeMounts:
    - mountPath: /test
      #subPath: agent.jar
      name: test-volume
  volumes:
  - name: my-volume
    emptyDir: {}
  - name: test-volume
    hostPath:
      path: /data
      type: DirectoryOrCreate
