lab/clusters/kind/services-stack/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-test
spec:
  #nodeName: monitoring-worker2
  #nodeSelector:
  #  application: app
  containers:
  - name: volume-test
    image: nginx:stable-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: volv
      mountPath: /data
    ports:
    - containerPort: 80
  volumes:
  - name: volv
    persistentVolumeClaim:
      claimName: local-path-pvc
