lab/clusters/kind/services-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - host: allan.local.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello
                port:
                  number: 8080
