lab/clusters/kind/services-stack/pod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volume-test
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: allan.local.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: volume-test
            port:
              number: 8080
